# KronotermVoiceActions

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  release.yaml
custom_components/: README.md
custom_components/kronoterm_voice_actions/: Pipfile  requirements.txt
custom_components/kronoterm_voice_actions/test/: test_matcher.py  test_mqtt.py
custom_components/kronoterm_voice_actions/wyoming/: __init__.py  assist_satellite.py  config_flow.py  const.py  conversation.py  kronoterm_cloud_api.py  kronoterm_enums.py  kronoterm_models.py  manifest.json  matcher.py  models.py  mqtt_client.py
test/: conftest.py  test_mqtt.py
